fixed partly login first time start up login data error. testing ui.

--- a/components/game/layout/footermenu.module.css
+++ b/components/game/layout/footermenu.module.css
@@ -4,3 +4,15 @@
   left:0px;
   width:100%;
 }
+
+.dropdown:hover {
+  background-color: red;
+}
+
+.dropdowncontent {
+  display: none;
+}
+
+.dropdown:hover .dropdowncontent {
+  display: block;
+}
